BusOne/src/objects/Remote_Meeting_vod__c.object
<CustomObject>
    <description>Maintains data for Remote Meetings</description>
    <fields>
        <fullName>Assigned_Host_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the User who will be assigned as the host of the remote meeting</description>
        <label>Assigned Host</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Remote_Meetings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Attendance_Report_Process_Status_vod__c</fullName>
        <description>Indicates the status of retrieving the attendance report</description>
        <label>Attendance Report Process Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Retries_Maxed_vod</fullName>
                </value>
                <value>
                    <fullName>Meeting_Not_Started_vod</fullName>
                </value>
                <value>
                    <fullName>Meeting_Occurred_vod</fullName>
                </value>
                <value>
                    <fullName>Retry_vod</fullName>
                </value>
                <value>
                    <fullName>Success_vod</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description_vod__c</fullName>
        <description>Description of the remote meeting</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Latest_Meeting_Start_Datetime_vod__c</fullName>
        <description>Indicates the latest datetime that the meeting was started</description>
        <label>Latest Meeting Start Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Meeting_Id_vod__c</fullName>
        <description>Remote Meeting Id</description>
        <label>Meeting Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meeting_Name_vod__c</fullName>
        <description>Meeting Name for the Remote Meeting</description>
        <label>Meeting Name</label>
        <length>300</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Mobile_ID_vod__c</fullName>
        <externalId>true</externalId>
        <label>Mobile ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Scheduled_DateTime_vod__c</fullName>
        <description>Date/Time of last API update to the Remote Meeting</description>
        <label>Scheduled DataTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Scheduled_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is TRUE when Remote Meeting information has been successfully created/updated via the web service</description>
        <label>Successfully Scheduled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Webinar_Alternative_Host_1_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Alternative Host 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Remote_Meetings1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Webinar_Alternative_Host_2_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Alternative Host 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Remote_Meetings2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Webinar_Alternative_Host_3_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Alternative Host 3</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Remote_Meetings3</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Remote Meeting</label>
    <nameField>
        <label>Remote Meeting Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Remote Meetings</pluralLabel>
    <recordTypes>
        <fullName>Call_vod</fullName>
        <active>false</active>
        <description>For Remote Meetings on Call</description>
        <label>Call_vod</label>
    </recordTypes>
    <recordTypes>
        <fullName>Webinar_vod</fullName>
        <active>true</active>
        <description>Record Type for Engage Webinar</description>
        <label>Webinar_vod</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>